tweaks to image alignment and link fixes in portfolios, among other things

--- a/sass/content/_content.scss
+++ b/sass/content/_content.scss
@@ -88,7 +88,7 @@ blockquote {
 
 .alignleft {
 	float: left;
-	margin: 5px 20px 10px -109px;
+	margin: 5px 20px 10px 0;
 }
 
 .aligncenter {
@@ -98,7 +98,7 @@ blockquote {
 
 .alignright {
 	float: right;
-	margin: 5px 0 10px 15px;
+	margin: 5px 0 10px 20px;
 }
 
 .wp-caption-text {
